# docker-python-app

./: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
tests/: test_main.py
